--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,14 +11,16 @@
   "dependencies": {
     "@react-navigation/native": "^7.0.3",
     "@react-navigation/native-stack": "^7.0.4",
-    "expo": "~52.0.7",
+    "expo": "~52.0.11",
     "expo-status-bar": "~2.0.0",
     "react": "18.3.1",
-    "react-native": "0.76.2",
+    "react-native": "0.76.3",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-paper": "^5.12.5",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
     "react-native-snap-carousel": "^4.0.0-beta.6",
+    "react-native-svg": "^15.8.0",
     "react-native-toast-message": "^2.2.1"
   },
   "devDependencies": {
