--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,8 @@
     "@react-navigation/native": "^7.0.3",
     "@react-navigation/native-stack": "^7.0.4",
     "expo": "~52.0.11",
+    "expo-camera": "^16.0.9",
+    "expo-image-picker": "^16.0.3",
     "expo-status-bar": "~2.0.0",
     "react": "18.3.1",
     "react-native": "0.76.3",
