--- a/server/package.json
+++ b/server/package.json
@@ -4,16 +4,18 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "dev": "Set NODE_ENV=development&& nodemon server.js",
-    "start": "Set NODE_ENV=production&& nodemon server.js"
+    "dev": "Set NODE_ENV=Development&& nodemon server.js",
+    "start": "Set NODE_ENV=Production&& nodemon server.js"
   },
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.7",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.4",
     "validator": "^13.12.0"
   }
