--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "mongoose": "^8.8.4",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.16",
+    "stripe": "^17.4.0",
     "validator": "^13.12.0"
   }
 }
