--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "Set NODE_ENV=Development&& nodemon server.js",
-    "start": "Set NODE_ENV=Production&& nodemon server.js"
+    "start": "node server.js"
   },
   "author": "",
   "license": "ISC",
@@ -14,6 +14,7 @@
     "bcrypt": "^5.1.1",
     "cloudinary": "^2.5.1",
     "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
     "datauri": "^4.1.0",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
