--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,10 +11,13 @@
   "dependencies": {
     "@react-navigation/native": "^7.0.3",
     "@react-navigation/native-stack": "^7.0.4",
+    "@reduxjs/toolkit": "^2.4.0",
+    "axios": "^1.7.9",
     "expo": "~52.0.11",
     "expo-camera": "^16.0.9",
     "expo-image-picker": "^16.0.3",
     "expo-status-bar": "~2.0.0",
+    "mime": "^4.0.4",
     "react": "18.3.1",
     "react-native": "0.76.3",
     "react-native-chart-kit": "^6.12.0",
@@ -23,7 +26,8 @@
     "react-native-screens": "~4.1.0",
     "react-native-snap-carousel": "^4.0.0-beta.6",
     "react-native-svg": "^15.8.0",
-    "react-native-toast-message": "^2.2.1"
+    "react-native-toast-message": "^2.2.1",
+    "react-redux": "^9.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
