--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@react-navigation/native": "^7.0.3",
     "@react-navigation/native-stack": "^7.0.4",
     "@reduxjs/toolkit": "^2.4.0",
+    "@stripe/stripe-react-native": "^0.40.0",
     "axios": "^1.7.9",
     "expo": "~52.0.11",
     "expo-camera": "^16.0.9",
